--- a/css/estilos.css
+++ b/css/estilos.css
@@ -168,8 +168,8 @@ figure{
 
 .event{
     border: 1px solid gray;
-    margin: 10px;
-    width: 450px;
+    margin: 1%;
+    width: 47%;
     flex-shrink: 0;
     border-radius: 10px;
     overflow: hidden;
@@ -333,11 +333,24 @@ figure{
     .proyect-description{
         font-size: 1em;
     }
+
+    .event{
+        width: auto;
+        flex-shrink: initial;
+    }
+    .event img{
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 480px){
     .proyect-details{
         font-size: 12px;
+    }
+
+    .event-detail{
+        margin: -2em .5em .5em .5em ;
+        padding: 1em;
     }
 
 }
