--- a/css/estilos.css
+++ b/css/estilos.css
@@ -291,6 +291,26 @@ figure{
     .container{
         padding: 0 1em;
     }
+
+    .hero{
+        height: auto;
+        position: relative;
+        overflow: hidden;
+        padding: 2em;
+    }
+    .hero-foto{
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+    }
+    h1{
+        font-size: 2em;
+        z-index: 2;
+    }
 }
 
 @media screen and (max-width: 767px){
@@ -346,6 +366,9 @@ figure{
 }
 
 @media screen and (max-width: 480px){
+    h1{
+        font-size: 1.5em;
+    }
     .proyect-details{
         font-size: 12px;
     }
@@ -373,11 +396,17 @@ figure{
     .footer{
         display: block;
         text-align: center;
-        border: 1px solid transparent; /**para reparar los bordes blancos entre secciones/
+        border: 1px solid transparent; /**para reparar los bordes blancos entre secciones*/
     }
 
 }
 
 @media screen and (max-width: 320px){
-    
+    h1{
+        font-size: 1.2em;
+    }
+
+    .hero{
+        padding: 2em 1em;
+    }
 }
