--- a/css/estilos.css
+++ b/css/estilos.css
@@ -284,6 +284,24 @@ figure{
     flex-wrap: inherit;
 }
 
+.youtube-video{
+    position: absolute ;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.flexible-video{
+    width: 100%;
+    height: 0;
+    padding-top: 56.25%;
+    background: blue;
+    position: relative;
+}
+
 
 /* Desktop first que empiece desde el MQ mas grande */
 
